# Infographie

./: CMakeLists.txt
Dependencies/GLM/test/gtx/: gtx_matrix_factorisation.cpp
src/: Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  ShaderProgram.cpp  ShaderProgram.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp
src/ShaderSource/: fragment.glsl  vertex.glsl
